--- a/src/System.Transactions.Local/src/System.Transactions.Local.csproj
+++ b/src/System.Transactions.Local/src/System.Transactions.Local.csproj
@@ -1,14 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProjectGuid>{E97557E3-7DB1-4828-ACA5-44D8C68B6698}</ProjectGuid>
     <IsPartialFacadeAssembly>true</IsPartialFacadeAssembly>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Configurations>netcoreapp-Debug;netcoreapp-Release;uap-Windows_NT-Debug;uap-Windows_NT-Release</Configurations>
-    <!-- 
-    There are many instances of comparing an instance of a struct with null. Until these are all fixed,
-    disable the diagnostic.
-    -->
-    <Features>$(Features.Replace('strict', '')</Features>
   </PropertyGroup>
   <!-- Default configurations to help VS understand the options -->
   <ItemGroup>
