--- a/pkg/Microsoft.NETCore.Platforms/runtimeGroups.props
+++ b/pkg/Microsoft.NETCore.Platforms/runtimeGroups.props
@@ -112,7 +112,7 @@
     <RuntimeGroup Include="sles">
       <Parent>linux</Parent>
       <Architectures>x64</Architectures>
-      <Versions>12;12.1;12.2;12.3</Versions>
+      <Versions>12;12.1;12.2;12.3;15</Versions>
     </RuntimeGroup>
 
     <RuntimeGroup Include="tizen">
