--- a/src/System.Diagnostics.EventLog/tests/System.Diagnostics.EventLog.Tests.csproj
+++ b/src/System.Diagnostics.EventLog/tests/System.Diagnostics.EventLog.Tests.csproj
@@ -7,6 +7,7 @@
     <Compile Include="EventInstanceTests.cs" />
     <Compile Include="EventLogEntryCollectionTests.cs" />
     <Compile Include="EventLogReaderTests\EventLogReaderTests.cs" />
+    <Compile Include="EventLogReaderTests\EventLogWatcherTests.cs" />
     <Compile Include="EventLogTests\EventLogEntryWrittenTest.cs" />
     <Compile Include="EventLogTests\EventLogSourceCreationTests.cs" />
     <Compile Include="EventLogTests\EventLogTests.cs" />
