Test a couple of fixes for apartment state issues
Depends on https://github.com/dotnet/coreclr/pull/19384

Closes https://github.com/dotnet/coreclr/issues/17822
Closes https://github.com/dotnet/coreclr/issues/17787
Closes https://github.com/dotnet/coreclr/issues/19225

--- a/src/System.Threading.Thread/tests/System.Threading.Thread.Tests.csproj
+++ b/src/System.Threading.Thread/tests/System.Threading.Thread.Tests.csproj
@@ -27,5 +27,8 @@
     <ProjectReference Include="MTAMain\MTAMain.csproj">
       <Name>MTAMain</Name>
     </ProjectReference>
+    <ProjectReference Include="DefaultApartmentStateMain\DefaultApartmentStateMain.csproj">
+      <Name>DefaultApartmentStateMain</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
