--- a/src/Microsoft.IO.Redist/src/Microsoft.IO.Redist.csproj
+++ b/src/Microsoft.IO.Redist/src/Microsoft.IO.Redist.csproj
@@ -12,30 +12,30 @@
     <UWPCompatible Condition="'$(TargetGroup)' == 'uap' or '$(TargetGroup)' == 'uapaot'">true</UWPCompatible>
   </PropertyGroup>
   <ItemGroup Condition="'$(BuildingInsideVisualStudio)' == 'true' or ('$(TargetsWindows)' == 'true' and '$(UWPCompatible)' != 'true')">
-    <Compile Include="..\..\System.IO.FileSystem\src\Microsoft\Win32\SafeHandles\SafeFindHandle.Windows.cs" Link="Microsoft\IO\Redist\Win32\SafeHandles\SafeFindHandle.Windows.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Directory.cs" Link="Microsoft\IO\Redist\Directory.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\DirectoryInfo.cs" Link="Microsoft\IO\Redist\DirectoryInfo.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\EnumerationOptions.cs" Link="Microsoft\IO\Redist\EnumerationOptions.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEntry.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemEntry.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEntry.Windows.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemEntry.Windows.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerable.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemEnumerable.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerableFactory.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemEnumerableFactory.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerator.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemEnumerator.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerator.Win32.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemEnumerator.Win32.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerator.Windows.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemEnumerator.Windows.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemName.cs" Link="Microsoft\IO\Redist\Enumeration\FileSystemName.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Error.cs" Link="Microsoft\IO\Redist\Error.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\File.cs" Link="Microsoft\IO\Redist\File.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileInfo.cs" Link="Microsoft\IO\Redist\FileInfo.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileSystem.Windows.cs" Link="Microsoft\IO\Redist\FileSystem.Windows.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileSystemInfo.cs" Link="Microsoft\IO\Redist\FileSystemInfo.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileSystemInfo.Windows.cs" Link="Microsoft\IO\Redist\FileSystemInfo.Windows.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Iterator.cs" Link="Microsoft\IO\Redist\Iterator.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\MatchCasing.cs" Link="Microsoft\IO\Redist\MatchCasing.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\MatchType.cs" Link="Microsoft\IO\Redist\MatchType.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\ReadLinesIterator.cs" Link="Microsoft\IO\Redist\ReadLinesIterator.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\SearchOption.cs" Link="Microsoft\IO\Redist\SearchOption.cs" />
-    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\SearchTarget.cs" Link="Microsoft\IO\Redist\SearchTarget.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\Microsoft\Win32\SafeHandles\SafeFindHandle.Windows.cs" Link="Microsoft\IO\Win32\SafeHandles\SafeFindHandle.Windows.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Directory.cs" Link="Microsoft\IO\Directory.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\DirectoryInfo.cs" Link="Microsoft\IO\DirectoryInfo.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\EnumerationOptions.cs" Link="Microsoft\IO\EnumerationOptions.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEntry.cs" Link="Microsoft\IO\Enumeration\FileSystemEntry.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEntry.Windows.cs" Link="Microsoft\IO\Enumeration\FileSystemEntry.Windows.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerable.cs" Link="Microsoft\IO\Enumeration\FileSystemEnumerable.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerableFactory.cs" Link="Microsoft\IO\Enumeration\FileSystemEnumerableFactory.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerator.cs" Link="Microsoft\IO\Enumeration\FileSystemEnumerator.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerator.Win32.cs" Link="Microsoft\IO\Enumeration\FileSystemEnumerator.Win32.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemEnumerator.Windows.cs" Link="Microsoft\IO\Enumeration\FileSystemEnumerator.Windows.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Enumeration\FileSystemName.cs" Link="Microsoft\IO\Enumeration\FileSystemName.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Error.cs" Link="Microsoft\IO\Error.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\File.cs" Link="Microsoft\IO\File.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileInfo.cs" Link="Microsoft\IO\FileInfo.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileSystem.Windows.cs" Link="Microsoft\IO\FileSystem.Windows.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileSystemInfo.cs" Link="Microsoft\IO\FileSystemInfo.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\FileSystemInfo.Windows.cs" Link="Microsoft\IO\FileSystemInfo.Windows.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\Iterator.cs" Link="Microsoft\IO\Iterator.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\MatchCasing.cs" Link="Microsoft\IO\MatchCasing.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\MatchType.cs" Link="Microsoft\IO\MatchType.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\ReadLinesIterator.cs" Link="Microsoft\IO\ReadLinesIterator.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\SearchOption.cs" Link="Microsoft\IO\SearchOption.cs" />
+    <Compile Include="..\..\System.IO.FileSystem\src\System\IO\SearchTarget.cs" Link="Microsoft\IO\SearchTarget.cs" />
     <Compile Include="$(CommonPath)\System\IO\DriveInfoInternal.Win32.cs">
       <Link>Common\System\IO\DriveInfoInternal.Win32.cs</Link>
     </Compile>
@@ -219,7 +219,7 @@
     <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\kernel32\Interop.FormatMessage.cs">
       <Link>Common\CoreLib\Interop\Windows\Interop.FormatMessage.cs</Link>
     </Compile>
-    <Compile Include="Microsoft\IO\Redist\StringExtensions.cs" />
+    <Compile Include="Microsoft\IO\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetsNetFx)' == 'true'">
     <Reference Include="mscorlib" />
@@ -247,6 +247,6 @@
     <Reference Include="System.Memory" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Microsoft\IO\Redist\Enumeration\" />
+    <Folder Include="Microsoft\IO\Enumeration\" />
   </ItemGroup>
 </Project>
