--- a/src/Microsoft.IO.Redist/Directory.Build.props
+++ b/src/Microsoft.IO.Redist/Directory.Build.props
@@ -3,7 +3,7 @@
   <Import Project="..\Directory.Build.props" />
   <PropertyGroup>
     <AssemblyVersion>4.0.0.0</AssemblyVersion>
-    <AssemblyKey>MSFT</AssemblyKey>
+    <AssemblyKey>Open</AssemblyKey>
     <IsNETCoreApp>false</IsNETCoreApp>
     <IsUAP>false</IsUAP>
   </PropertyGroup>
